tests/getFramesForwardPassedEnd.out
Fatal error: failed to convert frame to gd image in /src/ffmpeg-php-code/ffmpeg-php/tests/getFramesForwardPassedEnd.php on line 11